feat: Implementação completa da home page moderna e melhorias na interface
🏠 HOME PAGE MODERNA:
- Nova home page com design moderno seguindo padrão dos relatórios
- Painel de controle com estatísticas do dia atual
- Cards informativos com dados de umidade, proteína e óleo
- Menu de navegação rápida para todas as seções
- Logo clicável tanto no header quanto na navbar

🎨 MELHORIAS DE INTERFACE:
- Template base atualizado com logo clicável
- Efeitos hover suaves em todos os elementos interativos
- Design responsivo e moderno
- Integração visual consistente entre módulos

📊 FUNCIONALIDADES IMPLEMENTADAS:
- Análise de óleo degomado (AnaliseOleoDegomado)
- Templates modernos para relatórios
- Interface JavaScript aprimorada
- Sistema de validação melhorado

🔧 MELHORIAS TÉCNICAS:
- Remoção de arquivos __pycache__
- Atualização do .gitignore
- Documentação completa das implementações
- Migração de banco de dados para novos modelos

📋 TEMPLATES E VIEWS:
- Views otimizadas para dashboard
- Templates responsivos
- Sistema de navegação integrado
- Configurações atualizadas

Co-authored-by: Eduardo Vinícius

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,16 @@ coverage/
 
 # Qualisoja específico
 qualisoja.log
+
+# Backup files
+*_backup.*
+*_new.*
+*.backup*
+*.bak
+
+# Test and debug files
+test_*.py
+debug_*.py
+debug_*.html
+*_test.html
+*_test.py
