--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,10 @@ python-dateutil>=2.8.0
 pytest>=7.0.0
 pytest-django>=4.5.0
 coverage>=6.0.0
+
+# Docker e Produção
+gunicorn>=21.0.0
+whitenoise>=6.5.0
+
+# Health checks
+psutil>=5.9.0
