feat: Implementação completa do sistema de análises
- Adicionada nova análise de Sílica com cálculo automático (Cinza - Sílica)
- Padronização completa do CRUD para todas as análises (Umidade, Proteína, Óleo, Sílica, etc.)
- Interface moderna com Bootstrap 5 e grid responsivo
- Templates padronizados para listagem, cadastro, edição e exclusão
- Home page atualizada com todas as 9 análises em layout organizado
- Navegação limpa e consistente
- Configuração do .gitignore para excluir banco de dados e migrations

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ db.sqlite3.backup
 db.sqlite3.backup.*
 media/
 
+# Migrations (exceto __init__.py)
+*/migrations/[0-9]*.py
+migrations/[0-9]*.py
+
 # Node/JavaScript
 node_modules/
 npm-debug.log
