feat: Configurações para Codespaces e deploy
- Adicionada configuração completa do .devcontainer
- Scripts de setup para ambiente de desenvolvimento
- Configurações de deployment com Nginx e Gunicorn
- Arquivos de exemplo para variáveis de ambiente
- Suporte para www.qualisoja.com.br
- Configurações de segurança para produção

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,18 @@ coverage/
 
 # Qualisoja específico
 qualisoja.log
+.env
+.env.local
+.env.production
+
+# SSL Certificates
+*.crt
+*.key
+*.pem
+
+# Codespaces
+.devcontainer/.env
+.vscode/settings.json.backup
 
 # Backup files
 *_backup.*
