--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Configurações QualiSoja - Desenvolvimento
-DEBUG=true
+DEBUG=False
 SECRET_KEY=dev-secret-key-change-me-qualisoja-2025
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
