--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ Django>=4.2,<6.0
 asgiref>=3.6.0
 sqlparse>=0.4.0
 
+# Configuração de ambiente
+python-dotenv>=1.0.0
+
 # Bibliotecas de UI
 django-widget-tweaks>=1.5.0
 
